# ai-shopping-assistant-lab

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  make.ps1  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py  eval_retriever_extended.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  agents1.py  graph.py  retrieval_generation.py  tools.py
apps/api/src/api/agents/prompts/: intent_router_agent.yml  qna_agent.yml  retrieval_generation.yml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  models.py
apps/api/src/api/api/processors/: submit_feedback.py
apps/api/src/api/core/: config.py
apps/chat_bot_ui/: Dockerfile  pyproject.toml
apps/chat_bot_ui/src/chat_bot_ui/: app.py
apps/chat_bot_ui/src/chat_bot_ui/core/: config.py
apps/items_mcp_server/: Dockerfile  pyproject.toml
apps/items_mcp_server/src/items_mcp_server/: main.py  utils.py
apps/items_mcp_server/src/items_mcp_server/core/: config.py
apps/reviews_mcp_server/: Dockerfile  pyproject.toml
apps/reviews_mcp_server/src/reviews_mcp_server/: main.py  utils.py
apps/reviews_mcp_server/src/reviews_mcp_server/core/: config.py
docs/: ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  TECHNICAL.md
notebooks/week01/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing.ipynb  03-RAG-pipeline.ipynb  04-Observability-Foundations.ipynb  05-RAG-Eval-Dataset.ipynb  06-RAG-Evals.ipynb
notebooks/week02/: 01-Structured-Output-Intro.ipynb  02-Structured-output-RAGPipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Management.ipynb  06-Eval-Dataset-Large.ipynb
notebooks/week03/: 01-LangGraph-into.ipynb  02-Query-Rewrite.ipynb  03-Router.ipynb  04-Agent-Single-turn.ipynb
notebooks/week04/: 01-Agent-Multi-turn.ipynb  02-Multiple-Tools.ipynb  03-Human-Feedback.ipynb  04-MCP.ipynb  05-State-Streaming.ipynb
