[project]
name = "ai-shopping-assistant-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.10.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chat_bot_ui",
]

[dependency-groups]
dev = [
    "fastapi>=0.138.0",
    "langchain-community>=0.4.0,<0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.3.3",
    "langsmith>=0.9.3",
    "matplotlib>=3.11.0",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
]
