[project]
name = "reviews-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "suresh-putla", email = "sureshputla.ps@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cohere>=7.0.5",
    "fastmcp>=3.4.4",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
]

[project.scripts]
reviews-mcp-server = "reviews_mcp_server:main"

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"
